<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/icons"
    android:padding="15dp"
    tools:context="prof.mo.ed.hajj_health.Activities.Consultancy">
    <LinearLayout
        android:padding="10dp"
        android:gravity="center"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">
        <TextView
            android:gravity="center"
            android:text="Remote Consultancy"
            android:textColor="@color/green"
            android:textSize="28sp"
            android:textStyle="bold"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
        <ImageView
            android:layout_gravity="center"
            android:src="@drawable/ic_logo"
            android:layout_width="50dp"
            android:layout_height="50dp" />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">
        <LinearLayout
            android:background="@drawable/radius_layout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center">
            <de.hdodenhof.circleimageview.CircleImageView
                android:layout_marginTop="4dp"
                android:id="@+id/profile_picture"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:src="@drawable/ic_person"
                android:background="@color/green"
                android:scaleType="centerCrop"/>
            <TextView
                android:padding="15dp"
                android:gravity="left|center_vertical"
                android:textSize="16sp"
                android:textColor="@color/icons"
                android:textStyle="bold"
                android:text="@string/q1"
                android:layout_width="match_parent"
                android:layout_height="match_parent" />
        </LinearLayout>
    </LinearLayout>
    <LinearLayout
        android:layout_marginTop="15dp"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">
        <LinearLayout
            android:background="@drawable/radius_layout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:orientation="horizontal">
            <TextView
                android:padding="15dp"
                android:gravity="center_vertical|right"
                android:textSize="16sp"
                android:textColor="@color/icons"
                android:textStyle="bold"
                android:text="@string/q2"
                android:layout_width="0dp"
                android:layout_weight="4"
                android:layout_height="match_parent" />
            <LinearLayout
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="match_parent"
                android:gravity="right|center_vertical">
                <de.hdodenhof.circleimageview.CircleImageView
                    android:layout_marginTop="4dp"
                    android:id="@+id/profile_picture2"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:src="@drawable/ic_person"
                    android:background="@color/green"
                    android:scaleType="centerCrop"/>
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">
        <LinearLayout
            android:layout_marginTop="15dp"
            android:background="@drawable/radius_layout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="left|center_vertical"
            android:orientation="horizontal">
            <LinearLayout
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="match_parent"
                android:gravity="left|center_vertical">
                <de.hdodenhof.circleimageview.CircleImageView
                    android:layout_marginTop="4dp"
                    android:id="@+id/profile_picture3"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:src="@drawable/ic_person"
                    android:background="@color/green"
                    android:scaleType="centerCrop"/>
            </LinearLayout>
            <TextView
                android:padding="15dp"
                android:gravity="center_vertical|left"
                android:textSize="16sp"
                android:textColor="@color/icons"
                android:textStyle="bold"
                android:text="@string/q3"
                android:layout_width="0dp"
                android:layout_weight="4"
                android:layout_height="match_parent" />
        </LinearLayout>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">
        <LinearLayout
            android:layout_marginTop="15dp"
            android:background="@drawable/border_colored"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:orientation="horizontal">
            <LinearLayout
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="match_parent"
                android:gravity="center_horizontal|center_vertical">
                <de.hdodenhof.circleimageview.CircleImageView
                    android:layout_marginTop="4dp"
                    android:id="@+id/profile_picture4"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:src="@drawable/ic_person"
                    android:background="@color/green"
                    android:scaleType="centerCrop"/>
            </LinearLayout>
            <LinearLayout
                android:padding="5dp"
                android:orientation="vertical"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="4">
                <TextView
                    android:padding="15dp"
                    android:gravity="top|left"
                    android:textSize="16sp"
                    android:textColor="@color/primary_text"
                    android:textStyle="bold"
                    android:text="@string/doc_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />
                <TextView
                    android:padding="15dp"
                    android:textSize="16sp"
                    android:textColor="@color/primary_text"
                    android:textStyle="bold"
                    android:text="@string/doc_spec"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>
</LinearLayout>