<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:map="http://schemas.android.com/apk/res-auto"
    android:gravity="center"
    android:orientation="vertical">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="5"
        android:orientation="vertical">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.8"
            android:gravity="center"
            android:orientation="horizontal">
            <TextView
                android:textColor="@color/accent"
                android:gravity="center_horizontal|center_vertical"
                android:text="@string/urin"
                android:id="@+id/urin_txt"
                android:textSize="18sp"
                android:textStyle="bold"
                android:layout_weight="4"
                android:layout_width="0dp"
                android:layout_height="match_parent" />
            <LinearLayout
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="match_parent"
                android:orientation="vertical">
                <TextView
                    android:id="@+id/txt_username"
                    android:gravity="center"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1"/>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="3">
                    <de.hdodenhof.circleimageview.CircleImageView
                        android:id="@+id/ProfilePic"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"/>
                </LinearLayout>
            </LinearLayout>
        </LinearLayout>
        <LinearLayout
            android:layout_margin="15dp"
            android:padding="5dp"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="4"
            android:orientation="vertical">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1">
                <TextView
                    android:gravity="center_vertical"
                    android:padding="5dp"
                    android:textColor="@color/primary_text"
                    android:textSize="20sp"
                    android:textStyle="bold"
                    android:text="@string/near_by"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent" />
            </LinearLayout>
            <LinearLayout
                android:orientation="horizontal"
                android:id="@+id/nearby"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="8">
                <fragment
                android:name="com.google.android.gms.maps.SupportMapFragment"
                android:id="@+id/map"
                android:layout_width="match_parent"
                android:layout_height="match_parent"/>
                <!--<fragment-->
                    <!--android:name="com.google.android.gms.maps.SupportMapFragment"-->
                    <!--android:id="@+id/map"-->
                    <!--android:layout_width="match_parent"-->
                    <!--android:layout_height="match_parent"-->
                    <!--map:cameraBearing="112.5"-->
                    <!--map:cameraTargetLat="31.1358861"-->
                    <!--map:cameraTargetLng="33.7873194"-->
                    <!--map:cameraTilt="35"-->
                    <!--map:cameraZoom="14"-->
                    <!--map:mapType="normal"-->
                    <!--map:uiCompass="false"-->
                    <!--app:mapType="satellite"-->
                    <!--map:uiRotateGestures="true"-->
                    <!--map:uiScrollGestures="false"-->
                    <!--map:uiTiltGestures="true"-->
                    <!--map:uiZoomControls="false"-->
                    <!--map:uiZoomGestures="true"-->
                    <!--tools:ignore="MissingPrefix"/>-->
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.9"
        android:orientation="horizontal"
        android:gravity="center">
        <TextView
            android:layout_marginLeft="15dp"
            android:textStyle="bold"
            android:textSize="20sp"
            android:textColor="#FFF"
            android:text="@string/Request"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1.5"/>
        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="0.5"
            android:padding="10dp"
            android:gravity="right">
            <android.support.design.widget.FloatingActionButton
                android:id="@+id/makeRequest"
                android:layout_width="match_parent"
                app:backgroundTint="@color/accent"
                android:layout_height="match_parent"
                android:src="@drawable/water7" />
        </LinearLayout>
    </LinearLayout>
</LinearLayout>